# atcoder-proposal

./: Cargo.toml  Dockerfile  clarify.toml  deny.toml
.github/workflows/: actionlint.yml  build.yml  licenses.yml  rust-lint.yml  typos.yml
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/templates/: install-command.bash.txt  install-script.toml.txt
