[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
license = "CC0-1.0"
publish = false

[dependencies]
askalono = "0.5.0"
askama = "0.12.1"
build-info = "0.0.39"
camino = "1.1.9"
cargo_metadata = "0.19.1"
clap = { version = "4.5.24", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
fs-err = "3.0.0"
ignore = "0.4.23"
indexmap = { version = "2.7.0", features = ["serde"] }
itertools = "0.14.0"
semver = "1.0.24"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
spdx = "0.10.8"
toml = "0.8.19"
toml_edit = "0.22.22"
twox-hash = "2.1.0"
walkdir = "2.5.0"

[build-dependencies]
build-info-build = "0.0.39"
